welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:5: error: not found: value lireColonne
  var res:Array[Color] = lireColonne(longueurTableau)
                         ^Array2:17: error: not found: value taille
  for (i <- 1 to taille -1) {
                 ^